# SafeMate

./: CMakeLists.txt  README.md  build_log.txt  sdkconfig  sdkconfig.defaults
components/a_ble_compat/: CMakeLists.txt  a_ble_compat.c  a_ble_compat_shim.c
components/gpio_button/: CMakeLists.txt  Kconfig
components/gpio_button/button/: button.c  button_obj.cpp
components/rmaker_app_network/: CHANGELOG.md  CMakeLists.txt  Kconfig.projbuild  README.md  app_network.c  app_network.h  app_thread_internal.c  app_wifi.h  app_wifi_internal.c  idf_component.yml  sdkconfig.rename
components/rmaker_app_network/private_include/: app_thread_internal.h  app_wifi_internal.h
main/: CMakeLists.txt  Project_SafeMate.c  idf_component.yml
